apps/dataset-catalog/components/dataset-form/components/distribution-section/distributions.module.scss
.field {
  padding-bottom: 1.5rem;
}

.modalContent {
  margin: var(--ds-size-8) 0;
  height: calc(100vh - 350px);
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
}

.list {
  display: flex;
  gap: 0.5rem;
}

.standard {
  display: grid;
  grid-template-columns: 43% 43% 10%;
  gap: 2%;
  padding-bottom: 1.5rem;
}

.button {
  width: fit-content;
}

.add {
  display: flex;
  height: fit-content;
  align-items: center;
}

.format {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.buttons {
  display: flex;
}

.heading {
  display: flex;
  justify-content: space-between;
}

.tags {
  display: flex;
  gap: 1rem;
  max-width: 963px;
  flex-wrap: wrap;
}

.dialog {
  max-width: 1000px;
  overflow: hidden;
}

.distributionContent {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.fieldSet {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;

  &:not(first-child) {
    padding-top: 1rem 0;
  }
}

.table {
  width: 100%;
  table-layout: fixed;
}

.table th,
.table td {
  word-wrap: break-word;
}

.comboboxOptionTwoColumns {
  display: grid;
  grid-template-columns: 49% 49%;
  gap: 2%;
}

.padding-bottom-4 {
  padding-bottom: var(--ds-size-4);
}

